0029142: Exception on Redo.

Order of attributes deltas is fixed.