src/TDF/TDF_Data.hxx
@@ -88,7 +88,7 @@ public:
     Standard_Boolean NotUndoMode() const;
   
   //! Dumps the Data on <aStream>.
-  Standard_EXPORT Standard_OStream& Dump (Standard_OStream& anOS) const;
+    Standard_EXPORT Standard_OStream& Dump (Standard_OStream& anOS) const;
 Standard_OStream& operator<< (Standard_OStream& anOS) const
 {
   return Dump(anOS);
@@ -147,6 +147,8 @@ protected:
 
 private:
 
+  //! Fixes order of Attributes' Deltas
+  void FixOrder(const Handle(TDF_Delta)& theDelta);
   
   //! Increments the transaction number and returns it.
   Standard_EXPORT Standard_Integer OpenTransaction();
