src/TDF/TDF_Delta.hxx
@@ -74,7 +74,7 @@ public:
   
   //! Associates a name <theName> with this delta
     void SetName (const TCollection_ExtendedString& theName);
-  
+
   Standard_EXPORT void Dump (Standard_OStream& OS) const;
 
 
@@ -95,11 +95,11 @@ protected:
   //! TDF_Data.
   Standard_EXPORT void AddAttributeDelta (const Handle(TDF_AttributeDelta)& anAttributeDelta);
 
-
-
 private:
 
-  
+  //! Replaces Attribute Delta List
+  Standard_EXPORT void ReplaceDeltaList(const TDF_AttributeDeltaList& theList);
+
   Standard_EXPORT void BeforeOrAfterApply (const Standard_Boolean before) const;
   
   Standard_EXPORT void Apply();
